# simplescraper

./: .gitignore  .gitmodules  Dockerfile  README.md  build-docker.sh  pyproject.toml
src/: scraper.py  simplescraper.py
src/helpers/: playwright_wrapper.py
